SELECT popup: Do not update popup content for arbitrary attribute change.

In the site of crbug.com/615250, mousedown event handler for a SELECT element sets
and deletes id attribute of the SELECT element. We shouldn't try to update popup
content in such case.

BUG=614250

Review-Url: https://codereview.chromium.org/2012653002
Cr-Commit-Position: refs/heads/master@{#395818}

Former-commit-id: 194ad8e687efc243d3b836a648697aaab394fbf0